<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".ui.activity.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:cardMaxElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@android:color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_edit"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/LayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="@id/layoutEmail"
                        app:layout_constraintRight_toRightOf="@id/layoutEmail"
                        app:layout_constraintTop_toBottomOf="@id/layoutEmail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_edit"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@android:color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/round_button"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="@id/LayoutPassword"
                        app:layout_constraintRight_toRightOf="@id/LayoutPassword"
                        app:layout_constraintTop_toBottomOf="@id/txtReset" />

                    <TextView
                        android:id="@+id/txtRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/belum_punya_akun_silahkan_daftar_sekarang"
                        app:layout_constraintHorizontal_bias="0.110"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/btnLogin"
                        app:layout_constraintLeft_toLeftOf="@id/btnLogin"
                        app:layout_constraintRight_toRightOf="@id/btnLogin"
                        />

                    <TextView
                        android:id="@+id/txtReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_password"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintTop_toBottomOf="@id/LayoutPassword"
                        app:layout_constraintRight_toRightOf="@id/LayoutPassword"/>

                    <ProgressBar
                        android:id="@+id/progressLoading"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:visibility="invisible"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>