<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@android:color/holo_blue_dark"
    tools:context=".ui.activity.register.RegisterActivity">

    <ProgressBar
        android:id="@+id/progressLoading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true"
                app:cardMaxElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@android:color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email"
                            android:textColor="@android:color/black"
                            android:background="@drawable/round_edit"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/LayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/layoutEmail"
                        app:layout_constraintLeft_toLeftOf="@id/layoutEmail"
                        app:layout_constraintRight_toRightOf="@id/layoutEmail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_edit"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@android:color/black"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/LayoutPasswordConfrim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/LayoutPassword"
                        app:layout_constraintLeft_toLeftOf="@id/LayoutPassword"
                        app:layout_constraintRight_toRightOf="@id/LayoutPassword">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edPasswordConfrim"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_edit"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:textColor="@android:color/black"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button"
                        android:textColor="@android:color/white"
                        android:text="@string/register"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/LayoutPasswordConfrim"
                        app:layout_constraintLeft_toLeftOf="@+id/LayoutPasswordConfrim"
                        app:layout_constraintRight_toRightOf="@+id/LayoutPasswordConfrim"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>